# PDP-Asteroid-Orbits

./: .gitignore  README.md  image_clicker.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
.virtual_documents/quick_notebooks/: plotting_test.ipynb
pdp_asteroids/: .token  .token.key  .tokens  .~lock..token.key#  demo_workflow.py  hf_utils.py  image_clicker.py  image_switcher.py  investigation_manager.py  position_to_orbit.py  position_to_orbit.py~Updated upstream  token_handler.py
pdp_asteroids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pdp_asteroids/fit_results/: .txt  IS.iterinfo  IS.points  IS.ptprob  live.points  phys_live.points  summary.txt
pdp_asteroids/imagedata/: ._d146_os_bs_ff_bp_wcs.fits  ._d148_os_bs_ff_bp_wcs.fits  ._d150_os_bs_ff_bp_wcs.fits  ._d152_os_bs_ff_bp_wcs.fits  .~lock.Notes on data for PDP Team 8.xlsx#  Notes on data for PDP Team 8.xlsx  image_checker.py
quick_notebooks/: image_clicker.ipynb  plotting_test.ipynb
quick_notebooks/.ipynb_checkpoints/: Student_working_notebook-checkpoint.ipynb  image_clicker-checkpoint.ipynb
quick_notebooks/.virtual_documents/: plotting_test.ipynb
tests/: test_hf_utils.py  test_image_click.py  test_image_switcher.py  test_investigation_manager.py  test_position_to_orbit.py
